# MyRayTracer

./: .gitignore  CMakeLists.txt  canvas.h  general.h  instance.h  main.cpp  material.h  mesh.h  myrandom.h  object.h  run.sh  scene.h  sdlcontext.h  texture.h  tinymath.h
include/mygeo/: geo.h  mat.h  vec.h
util/: argparser.h
